# backend/services/api-gateway/cmd/gateway/docs/swagger.yaml
@@ -1,4 +1,24 @@
 definitions:
+  airlinepb.CreateAirlineRequest:
+    properties:
+      iata_code:
+        type: string
+      icao_code:
+        type: string
+      name:
+        type: string
+      owner_id:
+        type: string
+      starting_airport_id:
+        type: string
+    type: object
+  airlinepb.CreateAirlineResponse:
+    properties:
+      balance:
+        type: number
+      id:
+        type: string
+    type: object
   dto.AccessTokenResponse:
     properties:
       access_token:
@@ -270,8 +290,6 @@ definitions:
         type: string
       icao_code:
         type: string
-      id:
-        type: string
       intl_name:
         type: string
       local_name:
@@ -326,8 +344,6 @@ definitions:
         type: number
       diaspora:
         type: number
-      id:
-        type: string
       region_a:
         type: string
       region_b:
@@ -343,8 +359,6 @@ definitions:
         type: string
       gdp_per_capita:
         type: number
-      id:
-        type: string
       intl_name:
         type: string
       local_code:
@@ -471,6 +485,39 @@ paths:
       summary: Purchase aircraft
       tags:
       - Aircraft
+  /airline:
+    post:
+      consumes:
+      - application/json
+      description: Creates an airline for the authenticated user
+      parameters:
+      - description: Airline details
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/airlinepb.CreateAirlineRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Airline created successfully
+          schema:
+            $ref: '#/definitions/airlinepb.CreateAirlineResponse'
+        "400":
+          description: 1 - request validation error, 2 - airport not found, 3 - user
+            not found
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "401":
+          description: Unauthorized
+        "409":
+          description: Airline conflict
+        "500":
+          description: Internal server error
+      summary: Create airline
+      tags:
+      - Airline
   /airport:
     post:
       consumes:
