# backend/services/api-gateway/internal/routes/routes.go
@@ -13,11 +13,12 @@ import (
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
 
-func SetupRoutes(authClient *grpcclient.AuthClient, operationsClient *grpcclient.OperationsClient, fleetClient *grpcclient.FleetClient, socketHub realtime.Hub, config *config.Config) *gin.Engine {
+func SetupRoutes(authClient *grpcclient.AuthClient, operationsClient *grpcclient.OperationsClient, fleetClient *grpcclient.FleetClient, airlineClient *grpcclient.AirlineClient, socketHub realtime.Hub, config *config.Config) *gin.Engine {
 	router := gin.Default()
 	router.Use(middleware.CORSMiddleware())
 
 	authHandler := handlers.NewAuthHandler(authClient, config)
+	airlineHandler := handlers.NewAirlineHandler(airlineClient)
 	operationsHandler := handlers.NewOperationsHandler(operationsClient, config) // maybe config is extra
 	fleetHandler := handlers.NewFleetHandler(fleetClient)
 
@@ -36,6 +37,7 @@ func SetupRoutes(authClient *grpcclient.AuthClient, operationsClient *grpcclient
 		protected := api.Group("")
 		protected.Use(middleware.AuthMiddleware(config.JWTPublicKey, authClient))
 		{
+			protected.POST("/airline", airlineHandler.CreateAirline)
 			protected.POST("/aircraft", fleetHandler.PurchaseAircraft)
 
 			// admin only
